mejoras de base de datos
